# hako

./: .gitmodules  CMakeLists.txt  Kconfig  README.md
cmake/: hako.cmake
docs/: ARCHITECTURE.md  CONFIGURATION.md
ext/picoruby/mruby-compiler2/include/picoruby/: debug.h
ext/picoruby/mruby-compiler2/lib/prism/src/util/: pm_constant_pool.c
ext/picoruby/picoruby-posix-io/src/: io.c
ext/picoruby/picoruby-sandbox/src/mrubyc/: sandbox.c
extensions/: CMakeLists.txt  Kconfig
extensions/zephyr-gpio/: CMakeLists.txt  Kconfig  README.md
extensions/zephyr-gpio/include/: zephyr_gpio_ext.h
extensions/zephyr-gpio/lib/zephyr/: gpio.rb
extensions/zephyr-gpio/src/: zephyr_gpio.c
include/hako/: extension.h  loader.h
include/linker/: hako-sections.ld
src/hako/: loader.c
zephyr/: module.yml
